Project sync with git